fix overlaper footer

--- a/bSpy/app/assets/stylesheets/app.generic.css
+++ b/bSpy/app/assets/stylesheets/app.generic.css
@@ -8,9 +8,12 @@ body {
 	height: 100%;
     margin: 0 0 100px; /* bottom = footer height */
 }
+
 footer {
-    position: absolute;
-    left: 0;
     bottom: 0;
-    width: 100%;
+    color: #707070;
+    left: 0;
+    position: relative; //changed to relative from fixed also works if position is not there
+    font-size: small;
+    width:100%;
 }
